fix(issue-18): доработано описание методов для swagger
